--- a/www/index.html
+++ b/www/index.html
@@ -87,7 +87,7 @@
       </div>
 
     </div>
-    <!--<script src="cordova.js"></script>-->
+    <script src="cordova.js"></script>
     <script type="text/javascript" src="js/framework7.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
