--- a/www/pages/upload.html
+++ b/www/pages/upload.html
@@ -1,4 +1,4 @@
-  <div data-name="upload" class="page">
+  <div data-name="home" class="page">
     <div class="navbar">
       <div class="navbar-inner">
         <div class="left">
