update img size

--- a/www/pages/upload.html
+++ b/www/pages/upload.html
@@ -32,9 +32,9 @@
       </div>-->
 
       <div class="card">
-        <div class="card-header"></div>
+        <!-- <div class="card-header"></div> -->
         <div class="card-content"> 
-          <div class="card-content-inner"><img id="cameraimage" src="" width="100%"></div>
+          <div class="card-content-inner"><img id="cameraimage" src="img/noimage.png" style="height: 480px;" width="100%"></div>
         </div>
         <div class="card-footer">
           <a href="#" class="button button-fill color-blue btn-foto">Ambil Foto</a>
